<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
        <EditTextPreference
                android:key="@string/pref_key_username"
                android:title="@string/username"
                android:dialogTitle="@string/username" />
 
        <ListPreference
                android:key="@string/pref_key_gender"
                android:title="@string/gender"
                android:summary="@string/choose_gender"
                android:entries="@array/gender_names"
                android:entryValues="@array/gender_values"
                android:dialogTitle="@string/gender" />
        
        <MultiSelectListPreference 
                android:key="@string/pref_key_favorite_colors"
                android:title="@string/favorite_colors"
                android:summary="@string/choose_favorite_colors"
                android:entries="@array/color_names"
                android:entryValues="@array/color_values"
                android:dialogTitle="@string/favorite_colors" />

        <CheckBoxPreference
                android:key="@string/pref_key_receive_newsletter"
                android:title="@string/receive_newsletter"
                android:summary="@string/please_check_if_receive" />
        
</PreferenceScreen>