<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
        <EditTextPreference
                android:key="username"
                android:title="@string/username"
                android:dialogTitle="@string/username"
                android:maxLength="20" />
 
        <ListPreference
                android:key="gender"
                android:title="@string/gender"
                android:summary="@string/choose_gender"
                android:entries="@array/gender_names"
                android:entryValues="@array/gender_ids"
                android:dialogTitle="@string/gender" />
        
        <MultiSelectListPreference 
                android:key="favorite_colors"
                android:title="@string/favorite_colors"
                android:summary="@string/choose_favorite_colors"
                android:entries="@array/color_names"
                android:entryValues="@array/color_values"
                android:dialogTitle="@string/favorite_colors" />

        <SwitchPreference
                android:key="push_notification"
                android:title="@string/push_notification"
                android:summary="@string/push_notification_summary" />
        
        <CheckBoxPreference
                android:key="receive_newsletter"
                android:title="@string/receive_newsletter"
                android:summary="@string/receive_newsletter_summary" />
        
</PreferenceScreen>
